GearsetPOC/force-app/main/default/objects/Accident_Recommendation__c/Accident_Recommendation__c.object-meta.xml
<CustomObject>
    <description>Recommendation associated with a specific Accident or Assault. An Accicdent / assaultcan have multiple recommendations</description>
    <label>Safety Incident Recommendation</label>
    <nameField>
        <displayFormat>AR-{000000}</displayFormat>
        <label>Recommendation Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Safety Incident Recommendations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>