GearsetPOC/force-app/main/default/objects/Accident_Recommendation__c/fields/Accident_Follow_up_email__c.field-meta.xml
<CustomField>
    <fullName>Accident_Follow_up_email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Send a reminder email to key manager</inlineHelpText>
    <label>Follow up email</label>
    <type>Checkbox</type>
</CustomField>