GearsetPOC/force-app/main/default/objects/Accident_Recommendation__c/fields/Accident_send_1st_email__c.field-meta.xml
<CustomField>
    <fullName>Accident_send_1st_email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Send first email to key manager, notifying them that they have been assigned this recommendation</inlineHelpText>
    <label>Send 1st email</label>
    <type>Checkbox</type>
</CustomField>