GearsetPOC/force-app/main/default/objects/Accident_Recommendation__c/fields/Recomendation_Auto_Reminder_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Recomendation_Auto_Reminder_Send_Date__c</fullName>
    <description>For tracking the auto reminders</description>
    <label>Auto Reminder Send Date</label>
    <type>DateTime</type>
</CustomField>