GearsetPOC/force-app/main/default/objects/Accident_Recommendation__c/fields/Recommendation_Cause__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Cause__c</fullName>
    <label>Cause</label>
    <type>TextArea</type>
</CustomField>