GearsetPOC/force-app/main/default/objects/Accident_Recommendation__c/fields/Recommendation_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Closure_Date__c</fullName>
    <label>Closure Date</label>
    <type>Date</type>
</CustomField>