GearsetPOC/force-app/main/default/objects/Accident_Recommendation__c/fields/Recommendation_Comments_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Comments_Outcomes__c</fullName>
    <label>Comments &amp; Outcomes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>