GearsetPOC/force-app/main/default/objects/Accident_Recommendation__c/fields/Recommendation_Contractor_Key_Manager__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Contractor_Key_Manager__c</fullName>
    <label>Contractor Key Manager</label>
    <type>Email</type>
</CustomField>