GearsetPOC/force-app/main/default/objects/Accident_Recommendation__c/fields/Recommendation_Contractor_Key_Manger__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Contractor_Key_Manger__c</fullName>
    <inlineHelpText>Third party (non EIL) key manager</inlineHelpText>
    <label>Contractor Key Manager</label>
    <type>Email</type>
</CustomField>