GearsetPOC/force-app/main/default/objects/Accident_Recommendation__c/fields/Recommendation_Date_1st_email_sent__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Date_1st_email_sent__c</fullName>
    <label>Date 1st email sent</label>
    <type>DateTime</type>
</CustomField>