GearsetPOC/force-app/main/default/objects/Accident_Recommendation__c/fields/Recommendation_desc__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_desc__c</fullName>
    <label>Recommendation</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>