GearsetPOC/force-app/main/default/objects/Accident_Recommendation__c/fields/Recommendation_Key_Manager__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Key_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>