GearsetPOC/force-app/main/default/objects/Accident_Recommendation__c/fields/Recommendation_Line_Management__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Line_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Line Management</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Safety_Incident_Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>