GearsetPOC/force-app/main/default/objects/Accident_Recommendation__c/validationRules/One_key_manager.validationRule-meta.xml
<ValidationRule>
    <fullName>One_key_manager</fullName>
    <active>true</active>
    <description>Can have Key Manager OR contractor key manager, but not both</description>
    <errorConditionFormula>AND (NOT(ISBLANK(  Recommendation_Key_Manager__c )), NOT(ISBLANK(  Recommendation_Contractor_Key_Manager__c )))</errorConditionFormula>
    <errorMessage>You must set either the EIL Key Manager, or the Contractor key manager, but not both</errorMessage>
</ValidationRule>