GearsetPOC/force-app/main/default/objects/Accident_Recommendation__c/validationRules/Set_key_manager.validationRule-meta.xml
<ValidationRule>
    <fullName>Set_key_manager</fullName>
    <active>true</active>
    <description>key manager must be set if either email check boxes are ticked</description>
    <errorConditionFormula>AND( Accident_send_1st_email__c  = TRUE , 
ISBLANK(Recommendation_Key_Manager__c), ISBLANK(Recommendation_Contractor_Key_Manager__c)
)</errorConditionFormula>
    <errorMessage>You must specify either  the Key Manager or the Contractor Key Manager if you want to send an email</errorMessage>
</ValidationRule>